Add delete user endpoint
